# statcast-era-pitches

./: .gitignore  README.md  all_requirements.txt  benchmark.ipynb  main.py  pyproject.toml  requirements.txt  update.py
.github/workflows/: pull_request.yml  refresh_statcast_data.yml  update_statcast_data.yml
statcast/: __init__.py  update.py  utils.py
statcastPitchesR/: .Rbuildignore  DESCRIPTION
statcastPitchesR/R/: statcast_pitches.R
statcast_pitches/: _load_pitches.py  _utils.py
tests/: test_load.py  test_load_pl.py  test_load_sql.py  test_schema.py
tests/test_data/: test.sql
update/: main.py  schema.py
